--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,15 @@ dependencies {
     implementation 'com.github.parse-community.Parse-SDK-Android:parse:1.18.5'
     // for logging API calls to LogCat
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-
+    //noinspection GradleCompatible
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    //noinspection GradleCompatible
+    implementation "com.android.support:design:27.1.1"
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
